[build-system]
requires = [
    "setuptools==65.5.1",
    "setuptools_scm[toml]==7.0.5",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[project]
name = "bug-master-bot"
description = "Slack bot for handling PROW failures on slack CI channels"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["Programming Language :: Python :: 3"]

dynamic = ["version"]

[project.scripts]
bug-master = "bug_master.main:main"

[project.optional-dependencies]

lint = [
    "black==23.3.0",
    "isort==5.12.0",
    "mypy==1.3.0",
]
