[build-system]
requires = [
    "setuptools==75.8.0",
    "setuptools_scm[toml]==8.1.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.flake8]
max-line-length = 120
max-complexity = 18

[tool.black]
line_length = 120

[tool.isort]
line_length = 120
include_trailing_comma = true

[project]
name = "bug-master-bot"
description = "Slack bot for handling PROW failures on slack CI channels"
readme = "README.md"
license = { file = "LICENSE" }
classifiers = ["Programming Language :: Python :: 3"]

dynamic = ["version"]

[project.scripts]
bug-master = "bug_master.main:main"

[project.optional-dependencies]

lint = [
    "black==24.10.0",
    "isort==5.13.2",
    "flake8==7.1.1",
    "flake8-bugbear==24.12.12",
    "flake8_formatter_junit_xml==0.0.6",
    "flake8-colors==0.1.9",
    "flake8-eradicate==1.5.0",
    "pep8-naming==0.14.1",
    "flake8-use-fstring==1.4",
    "flake8-black==0.3.6",
    "flake8-isort==6.1.1",
]
